fixed links on the game level page

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -79,7 +79,7 @@ form{
    .row.content {height: auto;} 
  }
  .collapse{
-    background-color: #777;
+    background-color: #46a8e9;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -90,13 +90,14 @@ form{
     font-size: 15px;
 
  }
- .active, .collapsible:hover {
-    background-color: #555;
+ .active, .collapse:hover {
+    background-color: #46a8e9;
   }
  .collapseContent{
     padding: 0 18px;
     display: none;
     overflow: hidden;
-    background-color: #f1f1f1;
     max-width: 150px;
  }
+ 
+ 
