--- a/views/level_page.ejs
+++ b/views/level_page.ejs
@@ -223,7 +223,7 @@
         <div class="row ">
             <div class="col-md-6">
                 <div class="media blog-media">
-                  <a href="blog-post-left-sidebar.html"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
+                  <a href="/play/lvl1"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
                   <div class="circle">
                     <h5 class="day">LEVEL 1</h5>
                   </div>
@@ -236,7 +236,7 @@
             </div>
             <div class="col-md-6">
                 <div class="media blog-media">
-                  <a href="blog-post-left-sidebar.html"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
+                  <a href="/play/lvl2"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
                   <div class="circle">
                     <h5 class="day">LEVEL 2</h5>
                   </div>
@@ -249,7 +249,7 @@
             </div>
             <div class="col-md-6">
                 <div class="media blog-media">
-                  <a href="blog-post-left-sidebar.html"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
+                  <a href="/play/lvl3"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
                   <div class="circle">
                     <h5 class="day">LEVEL 3</h5>
                   </div>
@@ -263,7 +263,7 @@
 
             <div class="col-md-6">
                 <div class="media blog-media">
-                  <a href="blog-post-left-sidebar.html"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
+                  <a href="/play/lvl4"><img class="d-flex" src="https://icons.iconarchive.com/icons/webalys/kameleon.pics/512/Coding-Html-icon.png" alt="Generic placeholder image"></a>
                   <div class="circle">
                     <h5 class="day">LEVEL 4</h5>                  </div>
                   <div class="media-body">
