--- a/views/lvl1.ejs
+++ b/views/lvl1.ejs
@@ -17,57 +17,59 @@
             <%- include ('partials/nav.ejs') -%>
         </header>
     </div>
-    <h1>Questions for level 1!</h1>
+    <div class="game">
+        <h1>Questions for level 1!</h1>
 
-    <h2>1. Finish the declaration for the main method: public static ____ main(String [] args)</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>void</p>
-    </div>
-    <h2>2. Finish the code to print out the message on a new line: System.out._______('Hello World')</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>println</p>
-    </div>
-    <h2>3. What is the parameter for this code? public string garden(peach)</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>peach</p>
-    </div>
-    <h2>4. Declare a character variable with the name letter</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>char letter</p>
-    </div>
-    <h2>5. Declare a float variable with the name peanut</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>float peanut</p>
-    </div>
-    <h2>6. What kind of variable allows a lot of characters?</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>string</p>
-    </div>
-    <h2>7. Declare a string variable named sentence</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>String sentence</p>
-    </div>
-    <h2>8. Declare a class named House</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>Class house</p>
-    </div>
-    <h2>9. Declare an array of integers named id</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>int [] id</p>
-    </div>
-    <h2>10. Finish the code to print out the message on the same line: System.out._______('Hello World')</h2>
-    <button class="collapse">Show answer!</button>
-    <div class="collapseContent">
-        <p>print</p>
+        <h2>1. Finish the declaration for the main method: public static ____ main(String [] args)</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>void</p>
+        </div>
+        <h2>2. Finish the code to print out the message on a new line: System.out._______('Hello World')</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>println</p>
+        </div>
+        <h2>3. What is the parameter for this code? public string garden(peach)</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>peach</p>
+        </div>
+        <h2>4. Declare a character variable with the name letter</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>char letter</p>
+        </div>
+        <h2>5. Declare a float variable with the name peanut</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>float peanut</p>
+        </div>
+        <h2>6. What kind of variable allows a lot of characters?</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>string</p>
+        </div>
+        <h2>7. Declare a string variable named sentence</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>String sentence</p>
+        </div>
+        <h2>8. Declare a class named House</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>Class house</p>
+        </div>
+        <h2>9. Declare an array of integers named id</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>int [] id</p>
+        </div>
+        <h2>10. Finish the code to print out the message on the same line: System.out._______('Hello World')</h2>
+        <button class="collapse">Show answer!</button>
+        <div class="collapseContent">
+            <p>print</p>
+        </div>
     </div>
 
     <script>
